--- a/.gitignore
+++ b/.gitignore
@@ -164,4 +164,4 @@ cython_debug/
 #.idea/
 
 # End of https://www.toptal.com/developers/gitignore/api/python
-.streamlit/secrets.toml
+**/.streamlit/secrets.toml
