Squashed commit of the following:
commit 6f71772cdd82517bc7e37d63327e05cc7fcd6880
Author: Reed Schimmel <reedschimmel@gmail.com>
Date:   Sun Mar 12 12:39:06 2023 -0500

    fixed notebook size error hopefully

commit f297cccb0e31259bdea01e6a9e6d56b3cba9bb81
Author: Reed Schimmel <reedschimmel@gmail.com>
Date:   Sun Mar 12 12:34:22 2023 -0500

    idk

commit e3a6dbb55219ac6e17b9124eaf092e16ba30cea9
Author: Reed Schimmel <reedschimmel@gmail.com>
Date:   Sun Mar 12 12:32:45 2023 -0500

    moved file away

commit 5e643441b5d22a05ecd76a0abc58197c6c21df82
Author: Reed Schimmel <reedschimmel@gmail.com>
Date:   Sun Mar 12 12:31:26 2023 -0500

    trying to shrink size

commit ece745e14d826f9b1001bf0d2e9adf3dc935247d
Author: Reed Schimmel <reedschimmel@gmail.com>
Date:   Sun Mar 12 12:27:37 2023 -0500

    tried to shrink file size

commit bc0c671f8ea5711b0ad67705709c61ee4e8a7ed7
Author: Reed Schimmel <reedschimmel@gmail.com>
Date:   Sun Mar 12 12:25:17 2023 -0500

    notes

commit f5ec3a7a52641bd573db2dbb03d9390897bd0226
Author: Reed Schimmel <reedschimmel@gmail.com>
Date:   Sun Mar 12 12:25:11 2023 -0500

    wip

commit 8c39733726d419d0f7d6ddbb5ee36d643100eee1
Author: Reed Schimmel <reedschimmel@gmail.com>
Date:   Sun Mar 12 12:23:51 2023 -0500

    load voting position from local json

commit ff6786f5e00a90aefec0a2d923c02b0c89af68fc
Author: Reed Schimmel <reedschimmel@gmail.com>
Date:   Sun Mar 12 12:20:47 2023 -0500

    propub api error handling

commit ac5ba740fe3dc226b5fc6111d5cf60fb63b63822
Author: Reed Schimmel <reedschimmel@gmail.com>
Date:   Sun Mar 12 09:48:09 2023 -0500

    notes

commit 195d4deec1c98d286f5d2beae0ca44976c02ebec
Author: Reed Schimmel <reedschimmel@gmail.com>
Date:   Sun Mar 12 09:48:01 2023 -0500

    add lib to count tokens

commit c015f554c983259b5f02f596dccdde8c1b0cfb17
Author: Reed Schimmel <reedschimmel@gmail.com>
Date:   Sun Mar 12 09:47:45 2023 -0500

    remove ttl on congress. draft get bill text

commit c01b93dceccd803bf8636f0b6180

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 streamlit
-git+https://github.com/Reed-Schimmel/propublica-congress # python-congress
+git+https://github.com/Reed-Schimmel/propublica-congress # ProPublica's python-congress
 deta
 streamlit-extras
 notebook
 bs4
+openai
+tiktoken # for counting tokens
