Voting positions data (#9)
* adds notesbooks

* got house position, must fix senate

* debugging work in prog

* misc

* debug progress

* wip

* Page to view json from propub api

* misc

* download all bills

* working-ish

* starting to pop deta

* renderJSON

* misc work

* it is working

* dosctr update

* comments

* removed todo notes

* deta db member position wip

* new logic flow

* wip

* misc work

* ready for testing

* misc

* it works baby

* misc

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 streamlit
-python-congress
+git+https://github.com/Reed-Schimmel/propublica-congress # python-congress
 deta
 streamlit-extras
+notebook
